@@ -54,6 +54,8 @@ Main features of diktat are the following:
    curl -sSLO https://github.com/saveourtool/diktat/releases/download/v2.0.0/diktat && chmod a+x diktat
    ```
 
+2. _**For Windows only**_. Download diKTat.bat manually: [here](https://github.com/saveourtool/diktat/releases)
+
 ### Run diKTat
 
 Finally, run KTlint (with diKTat injected) to check your '*.kt' files in 'dir/your/dir':
@@ -62,17 +64,19 @@ Finally, run KTlint (with diKTat injected) to check your '*.kt' files in 'dir/yo
 $ ./diktat "dir/your/dir/**/*.kt"
 ```
 
+> _**On Windows**_
+> ```console
+> ./diktat.bat "dir/your/dir/**/*.kt"
+> ```
+
 To **autofix** all code style violations, use `--mode fix` option.
 
 ## Run with Maven using diktat-maven-plugin
-:heavy_exclamation_mark: If you are using **Java 16+**, you need to add `--add-opens java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED` flag to the JVM. For more information, see: https://github.com/pinterest/ktlint/issues/1195
-This can be done by setting `MAVEN_OPTS` variable:
 
-```
-export MAVEN_OPTS="--add-opens java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED"
-```
+You can see how it is configured in our examples for self-checks:
+- [Single project](examples/maven/pom.xml)
+- [Multi-module project](examples/maven-multiproject/pom.xml)
 
-This plugin is available since version 0.1.3. You can see how it is configured in our examples for self-checks: [examples](examples/maven/pom.xml).
 If you use it and encounter any problems, feel free to open issues on [github](https://github.com/saveourtool/diktat/issues).
 
 <details>
@@ -153,6 +157,9 @@ Requesting a specific _Maven_ `executionId` on the command line (the trailing
     ```
     </details>
 
+    * You can omit the `diktatConfigFile` or if it points to non-existed file
+      then DiKTat runs with default configuration.
+
 If you omit the `executionId`:
 
 ```console
@@ -164,18 +171,34 @@ $ mvn diktat:check
 rule sets by editing the YAML file).
 
 ## Run with Gradle using diktat-gradle-plugin
-Requires a gradle version no lower than 5.3.
+Requires a gradle version no lower than 7.0
 
-This plugin is available since version 0.1.5. You can see how the plugin is configured in our examples: [build.gradle.kts](examples/gradle-kotlin-dsl/build.gradle.kts).
+You can see how the plugin is configured in our examples:
+- [Kotlin DSL](examples/gradle-kotlin-dsl/build.gradle.kts)
+- [Kotlin DSL for multi-module project](examples/gradle-kotlin-dsl/build.gradle.kts)
+- [Groovy DSL](examples/gradle-kotlin-dsl/build.gradle.kts)
 
 <details>
 <summary>Add this plugin to your `build.gradle.kts`:</summary>
 
 ```kotlin
 plugins {
-    id("com.saveourtool.diktat.diktat-gradle-plugin") version "1.2.5"
+    id("com.saveourtool.diktat") version "2.0.0"
 }
 ```
+
+> _**Note**_ If you want to apply the plugin to multi-module projects"
+> ```kotlin
+> import com.saveourtool.diktat.plugin.gradle.DiktatGradlePlugin
+>
+> plugins {
+>     id("com.saveourtool.diktat") version "2.0.0" apply false
+> }
+>
+> allprojects {
+>     apply<DiktatGradlePlugin>()
+> }
+> ```
 
 Or use buildscript syntax:
 ```kotlin
@@ -184,11 +207,11 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.saveourtool.diktat:diktat-gradle-plugin:1.2.5")
+        classpath("com.saveourtool.diktat:diktat-gradle-plugin:2.0.0")
     }
 }
 
-apply(plugin = "com.saveourtool.diktat.diktat-gradle-plugin")
+apply(plugin = "com.saveourtool.diktat")
 ```
 
 You can then configure diktat using `diktat` extension:
@@ -204,14 +227,20 @@ diktat {
 
 Also in `diktat` extension you can configure different reporters and their output. You can specify `json`, `html`, `sarif`, `plain` (default).
 If `output` is set, it should be a file path. If not set, results will be printed to stdout.
+You can specify multiple reporters.
+If no reporter is specified, `plain` will be used with `stdout` as output.
 ```kotlin
 diktat {
-    // since 1.2.5 to keep in line with maven properties
-    reporter = "json" // "html", "json", "plain" (default), "sarif"
-    // before 1.2.5
-    // reporterType = "json" // "html", "json", "plain" (default), "sarif"
-
-    output = "someFile.json"
+    reporters {
+        plain()
+        json()
+        html {
+            output = file("someFile.html")
+        }
+        // checkstyle()
+        // sarif()
+        // gitHubActions()
+    }
 }
 ```
 
@@ -250,7 +279,7 @@ spotless {
 ```kotlin
 spotless {
    kotlin {
-      diktat("1.2.5").configFile("full/path/to/diktat-analysis.yml")
+      diktat("2.0.0").configFile("full/path/to/diktat-analysis.yml")
    }
 }
 ```
@@ -281,14 +310,14 @@ Diktat can be run via spotless-maven-plugin since version 2.8.0
 
 ```xml
 <diktat>
-  <version>1.2.5</version> <!-- optional -->
+  <version>2.0.0</version> <!-- optional -->
   <configFile>full/path/to/diktat-analysis.yml</configFile> <!-- optional, configuration file path -->
 </diktat>
 ```
 </details>
 
 ## GitHub Integration
-We suggest everyone to use common ["sarif"](https://docs.oasis-open.org/sarif/sarif/v2.0/sarif-v2.0.html) format as a `reporter` (`reporterType`)  in CI/CD.
+We suggest everyone to use common ["sarif"](https://docs.oasis-open.org/sarif/sarif/v2.0/sarif-v2.0.html) format as a `reporter` in CI/CD.
 GitHub has an [integration](https://docs.github.com/en/code-security/code-scanning/integrating-with-code-scanning/sarif-support-for-code-scanning)
 with SARIF format and provides you a native reporting of diktat issues in Pull Requests.
 
@@ -328,7 +357,7 @@ the limit will be exceeded and the step will fail. To solve this issue one can m
 
 `diktat-gradle-plugin` provides this capability with `mergeDiktatReports` task. This task aggregates reports of all diktat tasks
 of all Gradle project, which produce SARIF reports, and outputs the merged report into root project's build directory. Then this single
-file can be used as an input for Github action:
+file can be used as an input for GitHub action:
 ```yaml
 with:
     sarif_file: build/reports/diktat/diktat-merged.sarif
